# TextEditor

./: .gitignore  CMakeLists.txt  Readme.md
src/: command.h  cursor.cpp  cursor.h  main.cpp  rope.cpp  rope.h  text.txt  text_editor  text_editor.cpp  text_editor.h
src/text_editor.dSYM/Contents/Resources/DWARF/: text_editor
